adjunto bd donde modifique el nombre mydb

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\lucio\\Documents\\NetBeansProjects\\proyectoAnuc\\dist\\lib\\jcalendar-1.3.3.jar
+file.reference.mysql-connector-java-5.1.35-bin.jar=C:\\Users\\lucio\\Documents\\NetBeansProjects\\proyectoAnuc\\dist\\lib\\mysql-connector-java-5.1.35-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\stivenSP\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\lucio\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
